prepared message is correctly prepared to be processed by polypheny